[package]
name = "pendulum"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
num-complex = "0.4.0"
nalgebra = "0.33.0"
nalgebra-lapack = { version = "0.25.0", default-features = false, features = ["openblas"] }

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["gfx"]
